--- a/style.css
+++ b/style.css
@@ -141,7 +141,7 @@ section {
 }
 
 .contact {
-  padding: 0 25%;
+  padding: 0 35%;
   background: var(--blue-sombre);
   width: 100%;
   height: 100vh;
@@ -186,6 +186,7 @@ section {
 .contact form .box {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 .submitBox {
